syntax = "proto3";

import "cloudstate/entity_key.proto";

package carservice;

option java_package = "carservice";

message ReserveCarCommand {
    string reservationId = 1 [(.cloudstate.entity_key) = true];
    string company = 2;
    string carType = 3;
}

message CancelCarReservationCommand {
    string reservationId = 1 [(.cloudstate.entity_key) = true];
}

message CarReservation {
    string reservationId = 1;
    string company = 2;
    string carType = 3;
}

message GetCarReservationCommand {
    string reservationId = 1 [(.cloudstate.entity_key) = true];
}

message Empty {
}

service CarBookingService {
    rpc ReserveCar(ReserveCarCommand) returns (stream Empty);

    rpc CancelCarReservation(CancelCarReservationCommand) returns (stream Empty);

    rpc GetCarReservation(GetCarReservationCommand) returns (CarReservation);
}
